2008-02-12  Juanma Barranquero  <lekktu@gmail.com>

	* hexl.el (hexl-mode): Don't make `font-lock-defaults' buffer-local;
	it is already automatically buffer-local.

2008-02-11  Drew Adams  <drew.adams@oracle.com>

	* help.el (describe-key): Join some split lines to facilitate filling.
	* help-fns.el (describe-function-1): Fill text of overlong lines.

2008-02-12  Kenichi Handa  <handa@ni.aist.go.jp>

	* emacs-lisp/bytecomp.el (byte-compile-lapcode):
	Use unibyte-string instead of string-make-unibyte.

	* Makefile.in (AUTOGENEL): Remove charprop.el and uni-*.el.

2008-02-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-display): Change file arg to buffer arg, so it
	works also for buffers w/o buffer-file-name.  Update callers.
	(doc-view-clone-buffer-hook): New fun.
	(doc-view-mode): Use it for indirect clones.  Mark the overlays with
	the `doc-view' property so they can be recognized.

	* simple.el (clone-indirect-buffer-hook): New hook.
	(clone-indirect-buffer): Run it.

2008-02-11  Daiki Ueno  <ueno@unixuser.org>

	* epa.el (epa-menu-mode): Merge into epa-mode.
	(epa-menu-items): Rename the label "EasyPG Assistant" to
	"Encryption/Decryption".

	* epa-dired.el: Define a new minor-mode epa-dired-mode for dired.
	(epa-dired-mode-map): Rename from epa-dired-map.
	(epa-global-dired-mode): Rename the global minor mode.

2008-02-11 Drew Adams  <drew.adams@oracle.com>

	* isearch.el:
	(isearch-fail): New face.
	* isearch.el (isearch-fail): New face.
	(isearch-message): Highlight failure part of input.

2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ibuffer.el (ibuffer-header-line-format): New var.
	(ibuffer-mode): Set it instead of header-line-format.
	(ibuffer-update): Use it to set header-line-format.

	* international/mule-cmds.el (ucs-insert): Inherit surrounding
	properties like self-insert-command.

2008-02-11  Drew Adams  <drew.adams@oracle.com>

	* progmodes/etags.el: Add many doc strings.
